--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@syncfusion/ej2-vue-grids": "^18.3.40",
+    "axios": "^0.20.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-axios": "^3.0.1",
+    "vue-router": "^3.4.7",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
