--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@syncfusion/ej2-vue-dropdowns": "^18.3.40",
     "@syncfusion/ej2-vue-grids": "^18.3.40",
     "axios": "^0.20.0",
     "vue": "^2.5.2",
