--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@syncfusion/ej2-vue-dropdowns": "^18.3.40",
     "@syncfusion/ej2-vue-grids": "^18.3.40",
     "axios": "^0.20.0",
-    "vue": "^2.5.2",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.17.3",
+    "vue": "^2.6.12",
     "vue-axios": "^3.0.1",
     "vue-router": "^3.4.7",
     "vuex": "^3.5.1"
